personal-website.css
body{
    margin: 0;
    padding: 0;
}


ul {
    list-style: none;
}

a {
    color: white;
    font-size: 20px;
}

#email-btn{
    padding-top: 10px;
}


.nav-item{
    display: inline-block;
    padding-left: 29px;


}


#headBgXl {
    background-image: url('img/head2BgXl.png');
    background-size: cover;
    height: 800px;
    width: 100%;
    position: absolute;
    left: 0px;
    top: 0px;
    z-index: -1;
}


#intro-header {
    color: white;
    /*font-size: 10px;*/
    font-weight: bolder;
}

#title {
    color: white;


}

#contact-btn {
    color: white;
    border: solid 1px white;
    background-color: black;

}





/*/////////////MEDIA QUERIES/////////////////////////*/


/*SMALL*/

@media (min-width: 375px) {
    #header {
        margin-left: 30px;
        padding-top: 80px;

    }

    #headBgXl{
        background-position: -300px;
        height: 800px;
        width: 200%;
    }

    #intro-header {
        font-size: 75px;
    }

    #contact-btn {
        margin-left: 95px;

    }

}



/*SMALL*/


@media (min-width: 425px) {
    #navbar-header {
        margin-left: 80px;

    }

    #contact-btn {
        text-align: center;
    }

    #headBgText {
        margin-right: 10px ;
        font-size: 55px;

    }




}






/*MEDIUM  */


@media (min-width: 768px) {
    #navbar-header {
        margin-top: 65px;
        margin-left: 150px;
    }

}










    /*LARGE*/

@media (min-width: 1024px) {



    #navbar-header{
        margin-left: 280px;


    }
}
#about-me {
    padding-top: 0px;
    margin: 20px;
}


#headBgText{
    font-size: 90px;
}






/*EXTRA LARGE*/


@media (min-width: 1440px) {
    #navbar-header {

        margin-left: 150px;

}

    #headBgText{
        font-size: 110px;
    }

}

@media (min-width: 2560px) {



    #navbar-header {
    }

    #headBgText {
        font-size: 160px;
    }
    #title{
        font-size: 40px;
    }

    #contact-btn {
        margin-left: 220px;
        font-size: 20px;

    }

}

